add_subdirectory(bayesian_network)
add_subdirectory(decision_tree)
add_subdirectory(distribution)
add_subdirectory(tracker)
add_subdirectory(hidden_markov_model)
add_subdirectory(generalized_linear_model)
add_subdirectory(multi_arm_bandit)
add_subdirectory(support_vector_machine)
add_subdirectory(latent_sentiment_analysis)
add_subdirectory(marked_point_process)